# xstatic-font-awesome

./: .gitreview  MANIFEST.in  README.txt  pyproject.toml  setup.cfg  setup.py
xstatic/pkg/font_awesome/: __init__.py
