[metadata]
name = XStatic-Font-Awesome
description = Font-Awesome 4.7.0 (XStatic packaging standard)
description-file = README.rst
maintainer = Rob Cresswell
maintainer-email = robert.cresswell@outlook.com
home-page = https://fortawesome.github.io/Font-Awesome/
keywords = font_awesome xstatic
license = SIL OFL 1.1
zip_safe = False
namespace_packages =
    xstatic
    xstatic.pkg

[files]
packages =
    xstatic

[bdist_wheel]
universal = True
